<resources>
    <string name="app_name">FoodFusion</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="login_now">Login_Now</string>
    <string name="login">Login</string>
    <string name="have_a_nice_day">Have a nice day</string>
    <string name="see_you">See you</string>
</resources>