<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/simpleback"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="238dp"
        android:layout_height="156dp"
        app:srcCompat="@drawable/logo"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_margin="48dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/email">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/password">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ProgressBar>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/register">
    </Button>

    <TextView
        android:id="@+id/login"
        android:text="@string/login_now"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>